# aws_auth_eks_crd

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  catalog-info.yaml  conftest.py  iam_mapping.py  pyproject.toml  renovate.json5  requirements.txt  tox.ini
.github/: CODEOWNERS  renovate.json5
.github/workflows/: ci.yml  dependency-review.yml  docker-image.yml
kubernetes/: auth-operator.yaml  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  iamidentitymappings.yaml  kustomization.yaml  namespace.yaml  sa.yaml
kubernetes/test/: configmap.yaml  role.yaml  test-iam-arn.yaml  test-iam-rolearn.yaml  test-iam-userarn.yaml  test-iam.yaml
src/: mypy.ini
src/kubernetes_operator/: iam_mapping.py
tests/: .vulture_whitelist.py
tests/kubernetes_operator/: conftest.py  test_iam_mapping.py
