[tool.poetry]
name = "aws_auth_eks_crd"
version = "0.7.0"
description = "Operator to configure the aws-auth config map with IamIdentityMappings"
readme = "README.md"
repository = "https://github.com/coveooss/aws_auth_eks_crd"
authors = ["Coveo <blank@email.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "3.10.13"
kubernetes = "28.1.0"
kopf = "1.36.2"

[tool.poetry.dev-dependencies]
bandit = "1.7.6"
black = "23.12.1"
invoke = "2.2.0"
mypy = "1.8.0"
pre-commit = "3.6.0"
pycodestyle = "2.11.1"
pydocstyle = "6.3.0"
pylint = "3.0.3"
pytest = "7.4.4"
pytest-cov = "4.1.0"
PyYAML = "6.0.1"
vulture = "2.10"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.12"
types-setuptools = "^69.0.0.20240115"

[tool.stew.ci]
black = true

[tool.stew.ci.custom-runners]
pylint = { args = ["src/"] }
vulture = { args = ["src/", "tests/"] }
pydocstyle = {args = ["src/", "--ignore=D104,D213,D203,D107,D202"]}
pycodestyle = { args = ["src/", "--max-line-length=120","--ignore=E203,W503,W504"] }

[tool.stew.ci.custom-runners.pytest]
check-args = ["--cov", "src", "--cov-report", "term", "--cov-report", "html", "--cov-report", "xml", "--junit-xml=reports/test_results.xml"]

[tool.stew.build-dependencies]
setuptools = "*"

[tool.pylint]
[tool.pylint.message_control]
disable = [
    "missing-docstring",
    "bad-continuation",
    "broad-except",
    "fixme",
    "too-few-public-methods",
    "no-name-in-module",
    "redefined-outer-name"
]
[tool.pylint.format]
max-line-length = 120

[tool.pydocstyle]
ignore = "D104,D105,D107,D202,D203,D213,D400"

[tool.vulture]
min_confidence = 61

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
