[tool.poetry]
name = "aws_auth_eks_crd"
version = "0.8.1"
description = "Operator to configure the aws-auth config map with IamIdentityMappings"
readme = "README.md"
repository = "https://github.com/coveooss/aws_auth_eks_crd"
authors = ["Coveo <blank@email.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
kubernetes = "35.0.0"
kopf = "1.40.0"

[tool.poetry.dev-dependencies]
bandit = "1.9.3"
black = "26.1.0"
invoke = "2.2.1"
mypy = "1.19.1"
pre-commit = "4.5.1"
pycodestyle = "2.14.0"
pydocstyle = "6.3.0"
pylint = "4.0.4"
pytest = "9.0.2"
pytest-cov = "7.0.0"
PyYAML = "6.0.3"
vulture = "2.14"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.12"
types-setuptools = "^80.9.0.20250822"
pytest-mock = "^3.12.0"
isort = "^7.0.0"

[tool.stew.ci]
black = true

[tool.stew.ci.custom-runners]
pylint = { args = ["src/"] }
vulture = { args = ["src/", "tests/"] }
pydocstyle = {args = ["src/", "--ignore=D104,D213,D203,D107,D202"]}
pycodestyle = { args = ["src/", "--max-line-length=120","--ignore=E203,W503,W504"] }
isort = { check-args = ["--check", "."], autofix-args = ["."] }

[tool.stew.ci.custom-runners.pytest]
check-args = ["--cov", "src", "--cov-report", "term", "--cov-report", "html", "--cov-report", "xml", "--junit-xml=reports/test_results.xml"]

[tool.stew.build-dependencies]
setuptools = "*"

[tool.pylint]
[tool.pylint.message_control]
disable = [
    "missing-docstring",
    "bad-continuation",
    "broad-except",
    "fixme",
    "too-few-public-methods",
    "no-name-in-module",
    "redefined-outer-name"
]
[tool.pylint.format]
max-line-length = 120

[tool.pydocstyle]
ignore = "D104,D105,D107,D202,D203,D213,D400"

[tool.vulture]
min_confidence = 61

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
